--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
-    <!-- <script defer src="index.js"></script> -->
+    <script defer src="index.js"></script>
 </head>
 <body class="body-main">
     <div class="main-wrap">
@@ -16,7 +16,7 @@
             <img class="logo-main" src="./img/Instagram story - 14.png" alt="">
             <h1 class="main-text">наскільки ви задоволені  сервісом клініки?</h1>
         <main>
-            <button id="main-btn" >Залишити відгук</button>
+            <a id="main-btn" href="index.html">Залишити відгук</a>
         </main>
         </div>
         <div class="img-part">
@@ -28,10 +28,6 @@
 
 
 
-    <script>
-        const mainButton = document.querySelector("#main-btn");
-        mainButton.onclick = () => {
-        window.location.href = "index.html"}
-    </script>
+
 </body>
 </html>
